[gd_scene load_steps=3 format=3 uid="uid://850q10sj8ogl"]

[ext_resource type="Script" uid="uid://biyxj25pookv7" path="res://scenes/components/activate_component.gd" id="1_dluk3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dluk3"]
radius = 0.05

[node name="ActivateComponent" type="Node3D"]
script = ExtResource("1_dluk3")
metadata/_custom_type_script = "uid://biyxj25pookv7"

[node name="ActivationArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2147483648

[node name="SphereCollision" type="CollisionShape3D" parent="ActivationArea"]
shape = SubResource("SphereShape3D_dluk3")

[node name="DebounceTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="ContinuousTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="area_entered" from="ActivationArea" to="." method="_on_activation_area_area_entered"]
[connection signal="area_exited" from="ActivationArea" to="." method="_on_activation_area_area_exited"]
[connection signal="timeout" from="ContinuousTimer" to="." method="_on_continuous_timer_timeout"]
